# claude-code-hooks

./: .doc-check-ignore.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  settings.json.example
.githooks/: pre-commit
.github/workflows/: lint.yml  test.yml
hooks/: __init__.py  changelog-reminder.py  doc-update-check.py  environment-awareness.py  git-branch-protection.py  git-commit-message-filter.py  git-safety-check.py  hook_utils.py  large-file-awareness.py  large-file-guard.py  prompt-flag-appender.py  prompt-flag-appender.toml  python-uv-enforcer.py  release-check.py  release-reminder.py  rules-reminder.py  serena_awareness.py
hooks/prompt-fragments/: approval.md  sequential-thinking.md  ultrathink.md
tests/: README.md  __init__.py  conftest.py  test_changelog_reminder.py  test_doc_update_check.py  test_environment_awareness.py  test_git_branch_protection.py  test_git_commit_message_filter.py  test_git_safety_check.py  test_hook_utils.py  test_large_file_awareness.py  test_large_file_guard.py  test_prompt_flag_appender.py  test_python_uv_enforcer.py  test_release_check.py  test_release_reminder.py  test_rules_reminder.py  test_serena_awareness.py
