[project]
name = "claude-code-hooks"
version = "0.1.7"
description = "Safety guardrails and context injection for Claude Code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "nightshift2k"}]
keywords = ["claude", "claude-code", "hooks", "guardrails", "git", "safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/nightshift2k/claude-code-hooks"
Repository = "https://github.com/nightshift2k/claude-code-hooks"
Issues = "https://github.com/nightshift2k/claude-code-hooks/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "ruff>=0.1.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # Line length - allow long strings in error messages/docstrings

[tool.coverage.run]
source = ["hooks"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]
